# banking-prototype

./: .gitignore  flake.nix  module.nix
backend/: Cargo.nix  Cargo.toml  package.nix
backend/migrations/: 20211120145808_create_users.up.sql  20211121161703_create_transactions.down.sql  20211121161703_create_transactions.up.sql
backend/src/: graphql_schema.rs  main.rs  models.rs
frontend/: .env.production  do  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  wrangler.toml
frontend/src/lib/: Flash.svelte  api.ts  types.d.ts
frontend/src/pages/: index.astro
frontend/src/routes/: index.svelte
frontend/src/routes/users/: [id].svelte
